--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <title>github pages</title>
+    <script src="script.js"></script>
   </head>
   <body>
     Hello Github!!
